feat: modify indent

--- a/problems/9.palindrome-number.md
+++ b/problems/9.palindrome-number.md
@@ -28,6 +28,7 @@ Coud you solve it without converting the integer to a string?
 
 先排除不会是回文的负数，再将数字不断模10,插入新数中，最后判断两者是否相等
 
+```javascript
 /**
  * @param {number} x
  * @return {boolean}
@@ -43,3 +44,4 @@ var isPalindrome = function (x) {
   }
   return old === reverse  
 }
+```
