--- a/problems/2.add-two-numbers.md
+++ b/problems/2.add-two-numbers.md
@@ -34,8 +34,8 @@ Explanation: 342 + 465 = 807.
  * @return {ListNode}
  */
 var addTwoNumbers = function (l1, l2) {
-  var List = new ListNode(0)
-  var head = List
+  var list = new ListNode(0)
+  var head = list
   var sum = 0
   var current = 0
   var isAdd = false
@@ -63,6 +63,6 @@ var addTwoNumbers = function (l1, l2) {
     head.val = current
     sum = 0
   }
-  return List.next
+  return list.next
 }
 ```
