feat: update solution

--- a/problems/13.roman-to-integer.md
+++ b/problems/13.roman-to-integer.md
@@ -48,7 +48,7 @@ Explanation: M = 1000, CM = 900, XC = 90 and IV = 4.
 
 ## solution
 
-逐个判断，若对应的价值比下一位小，则为负，反之则为正
+1. 逐个判断，若对应的价值比下一位小，则为负，反之则为正
 
 ```javascript
 /**
