--- a/problems/15.3-sum.md
+++ b/problems/15.3-sum.md
@@ -22,7 +22,9 @@ A solution set is:
 
 ## solution
 
-先对数组排序，遍历元素，用双指针从小到大标记元素，以0为基准进行收缩，遍历时若头尾不符合区间或前后为相等值则可跳过
+1. 对数组排序
+2. 遍历元素，用双指针从小到大标记元素，以0为基准进行收缩
+3. 遍历时若头尾不符合区间或前后为相等值则可跳过
 
 ```javascript
 /**
