--- a/problems/16.3-sum-closest.md
+++ b/problems/16.3-sum-closest.md
@@ -20,7 +20,11 @@ Constraints:
 
 ## solution
 
-先对数组排序，遍历元素，用双指针头尾扫描，计算三数之和，若找到target则直接返回，若temp小于result则重新赋值，如果temp大于target则左移右指针，否则右移左指针
+1. 对数组排序
+2. 遍历元素，用双指针头尾扫描，计算三数之和
+3. 若找到target则直接返回
+4. 若temp小于result则重新赋值
+5. 若temp大于target则左移右指针，否则右移左指针
 
 ```javascript
 /**
