--- a/problems/2.add-two-numbers.md
+++ b/problems/2.add-two-numbers.md
@@ -18,7 +18,10 @@ Explanation: 342 + 465 = 807.
 
 ## solution
 
-建立一个新链表，遍历l1、l2两个链表，两两相加，使用sum记录节点之和，isAdd标记是否进位，得出结果后插入到新链表中
+1. 建立一个新链表
+2. 遍历l1、l2两个链表
+3. 两两相加，使用sum记录节点之和，isAdd标记是否进位
+4. 得出结果后插入到新链表中
 
 ```javascript
 /**
