--- a/problems/20.valid-parentheses.md
+++ b/problems/20.valid-parentheses.md
@@ -35,7 +35,8 @@ Output: true
 
 ## solution
 
-遍历字符串，遇到左括号时用栈存储匹配的右括号，遇到右括号时则出栈并作对比，一致则说明括号是成对的
+1. 遍历字符串
+2. 遇到左括号时用栈存储匹配的右括号，遇到右括号时则出栈并作对比，一致则说明括号是成对的
 
 ```javascript
 /**
