--- a/problems/21.merge-two-sorted-lists.md
+++ b/problems/21.merge-two-sorted-lists.md
@@ -13,7 +13,11 @@ Output: 1->1->2->3->4->4
 
 ## solution
 
-遍历两个链表，比较节点大小，将较小的节点插入新构造的链表，再将较小节点的链表后移一位，直至其中一个链表没有节点为止，并将另一条链表插入到新链表后
+1. 遍历两个链表
+2. 比较节点大小，将较小的节点插入新构造的链表
+3. 再将较小节点的链表后移一位
+4. 直至其中一个链表没有节点为止
+5. 将另一条链表插入到新链表后
 
 ```javascript
 /**
