--- a/problems/26.remove-duplicates-from-sorted-array.md
+++ b/problems/26.remove-duplicates-from-sorted-array.md
@@ -41,7 +41,8 @@ for (int i = 0; i < len; i++) {
 
 ## solution
 
-已知是有序数组，只需要记录遍历过的最后一个数字，与当前数字进行异或比较，若不为0则表示为新数，将其放至数组头部，用于计算结果时取数组的前n位数
+1. 已知是有序数组，只需要记录遍历过的最后一个数字，与当前数字进行异或比较
+2. 若不为0则表示为新数，将其放至数组头部，用于计算结果时取数组的前n位数
 
 ```javascript
 /**
