--- a/problems/3.longest-substring-without-repeating-characters.md
+++ b/problems/3.longest-substring-without-repeating-characters.md
@@ -27,7 +27,9 @@ Explanation: The answer is "wke", with the length of 3.
 
 ## solution
 
-先记录起点，开始遍历字符串，缓存对应字符最后出现的位置，若遍历时拿到当前字符上一次出现的位置在起点右方，则说明出现了重复字符，需要重新计算
+1. 先记录起点
+2. 开始遍历字符串，缓存对应字符最后出现的位置
+3. 若遍历时拿到当前字符上一次出现的位置在起点右方，则说明出现了重复字符，需要重新计算
 
 ```javascript
 /**
