--- a/problems/38.count-and-say.md
+++ b/problems/38.count-and-say.md
@@ -36,7 +36,8 @@ Explanation: For n = 3 the term was "21" in which we have two groups "2" and "1"
 
 ## solution
 
-通过循环判断前后字符是否相等，相等则累计出现次数，不等则拼接字符串，最后递归获取
+1. 通过循环判断前后字符是否相等，相等则累计出现次数，不等则拼接字符串
+2. 最后递归获取
 
 ```javascript
 /**
