--- a/problems/5.longest-palindromic-substring.md
+++ b/problems/5.longest-palindromic-substring.md
@@ -21,7 +21,7 @@ Output: "bb"
 
 ## solution
 
-以当前元素为基准，向左右移动判断是否为回文，要注意aba和abba都属于回文
+1. 以当前元素为基准，向左右移动判断是否为回文，要注意aba和abba都属于回文
 
 ```javascript
 /**
