--- a/problems/53.maximum-subarray.md
+++ b/problems/53.maximum-subarray.md
@@ -19,7 +19,9 @@ If you have figured out the O(n) solution, try coding another solution using the
 
 ## solution
 
-计算区间的和，当和大于0时继续计算，当和小于0时，开始下一个区间
+1. 计算区间的和
+2. 当和大于0时继续计算
+3. 当和小于0时，开始下一个区间
 
 ```javascript
 /**
