--- a/problems/7.reverse-integer.md
+++ b/problems/7.reverse-integer.md
@@ -25,7 +25,7 @@ Assume we are dealing with an environment which could only store integers within
 
 ## solution
 
-将其字符串化，使用js原生方法split、reverse、join，注意正负数和溢出
+1. 将其字符串化，使用js原生方法split、reverse、join，注意正负数和溢出
 
 ```javascript
 /**
