--- a/problems/9.palindrome-number.md
+++ b/problems/9.palindrome-number.md
@@ -26,7 +26,9 @@ Coud you solve it without converting the integer to a string?
 
 ## solution
 
-先排除不会是回文的负数，再将数字不断模10,插入新数中，最后判断两者是否相等
+1. 排除不会是回文的负数
+2. 将数字不断模10，插入新数中
+3. 判断两者是否相等
 
 ```javascript
 /**
