--- a/problems/1.two-sum.md
+++ b/problems/1.two-sum.md
@@ -19,7 +19,8 @@ return [0, 1].
 
 ## solution
 
-用对象存储已遍历过的value和对应的index，在遍历到新数时，只需要检查在对象中是否能找到与新数相加等于target的值
+1. 用对象存储已遍历过的value和对应的index
+2. 在遍历到新数时，只需要检查在对象中是否能找到与新数相加等于target的值
 
 ```javascript
 /**
