--- a/problems/14.longest-common-prefix.md
+++ b/problems/14.longest-common-prefix.md
@@ -23,7 +23,8 @@ All given inputs are in lowercase letters a-z.
 
 ## solution
 
-构造递归函数，从头遍历提供的多个字符串，若当前字符都相等则继续递归，若不等则跳出并返回前缀
+1. 构造递归函数，从头遍历提供的多个字符串
+2. 若当前字符都相等则继续递归，若不等则跳出并返回前缀
 
 ```javascript
 /**
