--- a/problems/27.remove-element.md
+++ b/problems/27.remove-element.md
@@ -45,7 +45,8 @@ for (int i = 0; i < len; i++) {
 
 ## solution
 
-遍历数组，若当前项与val相等，则直接从数组中去掉当前项，并将遍历的下标减1，这样时间复杂度只需要O(n)
+1. 遍历数组
+2. 若当前项与val相等，则直接从数组中去掉当前项，并将遍历的下标减1，这样时间复杂度只需要O(n)
 
 ```javascript
 /**
