--- a/problems/28.implement-strstr.md
+++ b/problems/28.implement-strstr.md
@@ -24,7 +24,7 @@ For the purpose of this problem, we will return 0 when needle is an empty string
 
 ## solution
 
-通过substr来截取字符串比较
+1. 通过substr来截取字符串比较
 
 ```javascript
 /**
