style: es5 to es6

--- a/problems/1.two-sum.md
+++ b/problems/1.two-sum.md
@@ -28,10 +28,10 @@ return [0, 1].
  * @param {number} target
  * @return {number[]}
  */
-var twoSum = function (nums, target) {
-  var exist = {}
-  for (var i = 0; i < nums.length; i++) {
-    var remainerIndex = exist[target - nums[i]]
+const twoSum = (nums, target) => {
+  let exist = {}
+  for (let i = 0; i < nums.length; i++) {
+    const remainerIndex = exist[target - nums[i]]
     if (remainerIndex !== undefined) {
       return [remainerIndex, i]
     }
