--- a/problems/11.container-with-most-water.md
+++ b/problems/11.container-with-most-water.md
@@ -26,8 +26,8 @@ Output: 49
  * @param {number[]} height
  * @return {number}
  */
-var maxArea = function (height) {
-  var start = 0,
+const maxArea = (height) => {
+  let start = 0,
       end = height.length - 1,
       max = 0,
       current = 0
