--- a/problems/13.roman-to-integer.md
+++ b/problems/13.roman-to-integer.md
@@ -55,8 +55,8 @@ Explanation: M = 1000, CM = 900, XC = 90 and IV = 4.
  * @param {string} s
  * @return {number}
  */
-var romanToInt = function (s) {
-  var map = {
+const romanToInt = (s) => {
+  const map = {
     I: 1,
     V: 5,
     X: 10,
@@ -65,10 +65,10 @@ var romanToInt = function (s) {
     D: 500,
     M: 1000  
   }  
-  var value = 0
-  for (var i = 0; i < s.length; i++) {
-    var current = map[s[i]]
-    var next = map[s[i + 1]]
+  let value = 0
+  for (let i = 0; i < s.length; i++) {
+    const current = map[s[i]]
+    const next = map[s[i + 1]]
     current < next ? value -= current : value += current
   }
   return value
