--- a/problems/1379.find-a-corresponding-node-of-a-binary-tree-in-a-clone-of-that-tree.md
+++ b/problems/1379.find-a-corresponding-node-of-a-binary-tree-in-a-clone-of-that-tree.md
@@ -71,8 +71,8 @@ target node is a node from the original tree and is not null.
  * @return {TreeNode}
  */
 
-var getTargetCopy = function (original, cloned, target) {
-  var search = function (n1, n2) {
+const getTargetCopy = (original, cloned, target) => {
+  const search = (n1, n2) => {
     if (!n1) return null
     if (n1 === target) return n2
     return search(n1.left, n2.left) || search(n1.right, n2.right)
