--- a/problems/14.longest-common-prefix.md
+++ b/problems/14.longest-common-prefix.md
@@ -31,14 +31,14 @@ All given inputs are in lowercase letters a-z.
  * @param {string[]} strs
  * @return {string}
  */
-var longestCommonPrefix = function (strs) {
-  var prefix = ''
-  var index = 0
-  var getPrefix = function () {
+const longestCommonPrefix = (strs) => {
+  let prefix = ''
+  let index = 0
+  const getPrefix = () => {
     if (!strs.length) return
-    var current = ''
-    for (var i = 0; i < strs.length; i++) {
-      var str = strs[i][index]
+    let current = ''
+    for (let i = 0; i < strs.length; i++) {
+      const str = strs[i][index]
       if (!str) return
       if (i) {
         if (current !== str) return
