--- a/problems/15.3-sum.md
+++ b/problems/15.3-sum.md
@@ -31,16 +31,16 @@ A solution set is:
  * @param {number[]} nums
  * @return {number[][]}
  */
-var threeSum = function (nums) {
-  var result = []
+const threeSum = (nums) => {
+  const result = []
   nums = nums.sort((a, b) => a - b)
-  for (var i = 0; i < nums.length - 2; i++) {
+  for (let i = 0; i < nums.length - 2; i++) {
     if (nums[i] === nums[i - 1]) continue
-    var start = i + 1
-    var end = nums.length - 1
+    let start = i + 1
+    let end = nums.length - 1
     if (nums[i] > 0 || nums[end] < 0) continue
     while (start < end) {
-      var sum = nums[i] + nums[start] + nums[end]
+      const sum = nums[i] + nums[start] + nums[end]
       if (sum === 0) {
         result.push([nums[i], nums[start], nums[end]])
         while (start < end && nums[start] === nums[++start]) {}
