--- a/problems/1561.maximum-number-of-coins-you-can-get.md
+++ b/problems/1561.maximum-number-of-coins-you-can-get.md
@@ -52,11 +52,11 @@ piles.length % 3 == 0
  * @param {number[]} piles
  * @return {number}
  */
-var maxCoins = function (piles) {
-  var arr = piles.sort((a, b) => b - a)
-  var count = piles.length / 3
-  var sum = 0
-  for (var i = 0; i < count; i++) {
+const maxCoins = (piles) => {
+  const arr = piles.sort((a, b) => b - a)
+  const count = piles.length / 3
+  let sum = 0
+  for (let i = 0; i < count; i++) {
     sum += arr[i * 2 + 1]
   }
   return sum
