--- a/problems/19.remove-nth-node-from-end-of-list.md
+++ b/problems/19.remove-nth-node-from-end-of-list.md
@@ -40,9 +40,9 @@ Could you do this in one pass?
  * @param {number} n
  * @return {ListNode}
  */
-var removeNthFromEnd = function (head, n) {
-  var node1 = head, node2 = head
-  for (var i = 0; i < n; i++) {
+const removeNthFromEnd = (head, n) => {
+  let node1 = head, node2 = head
+  for (let i = 0; i < n; i++) {
     node1 = node1.next
   }
   if (!node1) {
