--- a/problems/2.add-two-numbers.md
+++ b/problems/2.add-two-numbers.md
@@ -36,12 +36,12 @@ Explanation: 342 + 465 = 807.
  * @param {ListNode} l2
  * @return {ListNode}
  */
-var addTwoNumbers = function (l1, l2) {
-  var list = new ListNode(0)
-  var head = list
-  var sum = 0
-  var current = 0
-  var isAdd = false
+const addTwoNumbers = (l1, l2) => {
+  const list = new ListNode(0)
+  let head = list
+  let sum = 0
+  let current = 0
+  let isAdd = false
   while (l1 || l2 || isAdd) {
     head.next = new ListNode(0)
     head = head.next
