--- a/problems/20.valid-parentheses.md
+++ b/problems/20.valid-parentheses.md
@@ -43,9 +43,9 @@ Output: true
  * @param {string} s
  * @return {boolean}
  */
-var isValid = function (s) {
-  var stack = []
-  for (var i = 0; i < s.length; i++) {
+const isValid = (s) => {
+  const stack = []
+  for (let i = 0; i < s.length; i++) {
     switch (s[i]) {
       case '(':
         stack.push(')')  
