--- a/problems/22.generate-parentheses.md
+++ b/problems/22.generate-parentheses.md
@@ -26,9 +26,9 @@ For example, given n = 3, a solution set is:
  * @param {number} n
  * @return {string[]}
  */
-var generateParenthesis = function (n) {
-  var res = []
-  var help = function (cur, left, right) {
+const generateParenthesis = function (n) {
+  const res = []
+  const help = (cur, left, right) => {
     if (cur.length === 2 * n) {
       res.push(cur)
       return
