--- a/problems/3.longest-substring-without-repeating-characters.md
+++ b/problems/3.longest-substring-without-repeating-characters.md
@@ -36,12 +36,12 @@ Explanation: The answer is "wke", with the length of 3.
  * @param {string} s
  * @return {number}
  */
-var lengthOfLongestSubstring = function (s) {
-  var map = {}
-  var left = 0
-  var max = 0
-  for (var i = 0; i < s.length; i++) {
-    var value = s[i]  
+const lengthOfLongestSubstring = (s) => {
+  const map = {}
+  let left = 0
+  let max = 0
+  for (let i = 0; i < s.length; i++) {
+    const value = s[i]  
     left = map[value] >= left ? map[value] + 1 : left
     max = Math.max(max, i - left + 1)
     map[value] = i  
