--- a/problems/35.search-insert-position.md
+++ b/problems/35.search-insert-position.md
@@ -37,10 +37,10 @@ Output: 0
  * @param {number} target
  * @return {number}
  */
-var searchInsert = function (nums, target) {
-  var left = 0, right = nums.length - 1
+const searchInsert = (nums, target) => {
+  let left = 0, right = nums.length - 1
   while (left <= right) {
-    var mid = Math.floor((left + right) / 2)
+    const mid = Math.floor((left + right) / 2)
     if (nums[mid] === target) {
       return mid
     } else if (nums[mid] < target) {
