--- a/problems/49.group-anagrams.md
+++ b/problems/49.group-anagrams.md
@@ -31,24 +31,24 @@ The order of your output does not matter.
  * @param {string[]} strs
  * @return {string[][]}
  */
-var groupAnagrams = function (strs) {
-  var result = {}
-  for (var i = 0; i < strs.length; i++) {
-    var str = strs[i]
-    var array = new Array(26).fill(0)
-    for (var j = 0; j < str.length; j++) {
-      var char = str[j]
+const groupAnagrams = (strs) => {
+  const result = {}
+  for (let i = 0; i < strs.length; i++) {
+    const str = strs[i]
+    const array = new Array(26).fill(0)
+    for (let j = 0; j < str.length; j++) {
+      const char = str[j]
       array[char.charCodeAt() - 97]++
     }
-    var key = array.join('#')
+    const key = array.join('#')
     if (result[key]) {
       result[key].push(str)
     } else {
       result[key] = [str]
     }
   }
-  var answer = []
-  for (var i in result) {
+  const answer = []
+  for (let i in result) {
     answer.push(result[i])
   }
   return answer
