--- a/problems/53.maximum-subarray.md
+++ b/problems/53.maximum-subarray.md
@@ -28,10 +28,10 @@ If you have figured out the O(n) solution, try coding another solution using the
  * @param {number[]} nums
  * @return {number}
  */
-var maxSubArray = function (nums) {
-  var answer = nums[0]
-  var sum = 0
-  for (var i = 0; i < nums.length; i++) {
+const maxSubArray = (nums) => {
+  let answer = nums[0]
+  let sum = 0
+  for (let i = 0; i < nums.length; i++) {
     if (sum > 0) {
       sum += nums[i]
     } else {
