--- a/problems/535.encode-and-decode-tinyurl.md
+++ b/problems/535.encode-and-decode-tinyurl.md
@@ -21,7 +21,7 @@ base64的编码、解码
  * @param {string} longUrl
  * @return {string}
  */
-var encode = function (longUrl) {
+const encode = (longUrl) => {
   return 'http://tinyurl.com/' + new Buffer(longUrl).toString('base64')
 }
 
@@ -31,7 +31,7 @@ var encode = function (longUrl) {
  * @param {string} shortUrl
  * @return {string}
  */
-var decode = function (shortUrl) {
+const decode = (shortUrl) => {
   return new Buffer((shortUrl.split('http://tinyurl.com/')[1]), 'base64').toString()
 }
 
