--- a/problems/7.reverse-integer.md
+++ b/problems/7.reverse-integer.md
@@ -32,8 +32,8 @@ Assume we are dealing with an environment which could only store integers within
  * @param {number} x
  * @return {number}
  */
-var reverse = function (x) {
-  var reversed = Math.abs(x).toString().split('').reverse().join('') * Math.sign(x)
+const reverse = (x) => {
+  const reversed = Math.abs(x).toString().split('').reverse().join('') * Math.sign(x)
   return reversed <= 0x7fffffff && reversed >= -0x80000000 ? reversed : 0
 }
 ```
