--- a/problems/9.palindrome-number.md
+++ b/problems/9.palindrome-number.md
@@ -35,12 +35,12 @@ Coud you solve it without converting the integer to a string?
  * @param {number} x
  * @return {boolean}
  */
-var isPalindrome = function (x) {
+const isPalindrome = (x) => {
   if (x < 0) return false
-  var old = x
-  var reverse = 0
+  const old = x
+  let reverse = 0
   while (x) {
-    var remainder = x % 10
+    const remainder = x % 10
     reverse = reverse * 10 + remainder
     x = Math.floor(x / 10)
   }
