--- a/problems/1551.minimum-operations-to-make-array-equal.md
+++ b/problems/1551.minimum-operations-to-make-array-equal.md
@@ -40,12 +40,12 @@ Constraints:
  * @param {number} n
  * @return {number}
  */
-var minOperations = function (n) {
+const minOperations = (n) => {
   if (n % 2) {
-    var index = Math.ceil(n / 2)
+    const index = Math.ceil(n / 2)
     return index * (index - 1)
   } else {
-    var index = n / 2
+    const index = n / 2
     return index * index
   }   
 }
