--- a/problems/16.3-sum-closest.md
+++ b/problems/16.3-sum-closest.md
@@ -32,17 +32,17 @@ Constraints:
  * @param {number} target
  * @return {number}
  */
-var threeSumClosest = function (nums, target) {
+const threeSumClosest = (nums, target) => {
   nums.sort((a, b) => a - b)
-  var result = nums[0] + nums[1] + nums[nums.length - 1]
-  for (var i = 0; i < nums.length - 2; i++) {
-    var n1 = nums[i]
-    var left = i + 1
-    var right = nums.length - 1
+  const result = nums[0] + nums[1] + nums[nums.length - 1]
+  for (let i = 0; i < nums.length - 2; i++) {
+    const n1 = nums[i]
+    let left = i + 1
+    let right = nums.length - 1
     while (left < right) {
-      var n2 = nums[left]
-      var n3 = nums[right]
-      var temp = n1 + n2 + n3
+      const n2 = nums[left]
+      const n3 = nums[right]
+      const temp = n1 + n2 + n3
       if (temp === target) return temp
       if (Math.abs(temp - target) < Math.abs(result - target)) {
         result = temp
