--- a/problems/17.letter-combinations-of-a-phone-number.md
+++ b/problems/17.letter-combinations-of-a-phone-number.md
@@ -29,9 +29,9 @@ Although the above answer is in lexicographical order, your answer could be in a
  * @param {string} digits
  * @return {string[]}
  */
-var letterCombinations = function (digits) {
+const letterCombinations = (digits) => {
   if (!digits) return []
-  var map = {
+  const map = {
     2: 'abc',
     3: 'def',
     4: 'ghi',
@@ -41,13 +41,13 @@ var letterCombinations = function (digits) {
     8: 'tuv',
     9: 'wxyz'
   }
-  var result = ['']
-  for (var i = 0; i < digits.length; i++) {
-    var num = digits[i]
-    var nextResult = []
-    for (var j = 0; j < result.length; j++) {
-      for (var k = 0; k < map[num].length; k++) {
-        var char = map[num][k]
+  let result = ['']
+  for (let i = 0; i < digits.length; i++) {
+    const num = digits[i]
+    const nextResult = []
+    for (let j = 0; j < result.length; j++) {
+      for (let k = 0; k < map[num].length; k++) {
+        const char = map[num][k]
         nextResult.push(result[j] + char)
       }
     }
