--- a/problems/21.merge-two-sorted-lists.md
+++ b/problems/21.merge-two-sorted-lists.md
@@ -32,9 +32,9 @@ Output: 1->1->2->3->4->4
  * @param {ListNode} l2
  * @return {ListNode}
  */
-var mergeTwoLists = function (l1, l2) {
-  var list = new ListNode(null)
-  var current = list
+const mergeTwoLists = (l1, l2) => {
+  const list = new ListNode(null)
+  let current = list
   while (l1 && l2) {
     if (l1.val > l2.val) {
       current.next = l2
