--- a/problems/26.remove-duplicates-from-sorted-array.md
+++ b/problems/26.remove-duplicates-from-sorted-array.md
@@ -49,10 +49,10 @@ for (int i = 0; i < len; i++) {
  * @param {number[]} nums
  * @return {number}
  */
-var removeDuplicates = function (nums) {
-  var length = 0
-  var current
-  for (var i = 0; i < nums.length; i++) {
+const removeDuplicates = (nums) => {
+  let length = 0
+  let current
+  for (let i = 0; i < nums.length; i++) {
     if (current === undefined || nums[i] ^ current)   {
       current = nums[i]
       nums[length++] = current  
