--- a/problems/27.remove-element.md
+++ b/problems/27.remove-element.md
@@ -54,9 +54,9 @@ for (int i = 0; i < len; i++) {
  * @param {number} val
  * @return {number}
  */
-var removeElement = function (nums, val) {
-  var length = nums.length
-  for (var i = 0; i < length; i++) {
+const removeElement = (nums, val) => {
+  let length = nums.length
+  for (let i = 0; i < length; i++) {
     if (nums[i] === val) {
       nums.splice(i, 1)
       i--
