--- a/problems/28.implement-strstr.md
+++ b/problems/28.implement-strstr.md
@@ -32,10 +32,10 @@ For the purpose of this problem, we will return 0 when needle is an empty string
  * @param {string} needle
  * @return {number}
  */
-var strStr = function (haystack, needle) {
-  var length = needle.length
+const strStr = (haystack, needle) => {
+  const length = needle.length
   if (length === 0) return 0
-  for (var i = 0; i < haystack.length; i++) {
+  for (let i = 0; i < haystack.length; i++) {
     if (haystack.substr(i, length) === needle) return i
   }  
   return -1  
