--- a/problems/38.count-and-say.md
+++ b/problems/38.count-and-say.md
@@ -44,14 +44,14 @@ Explanation: For n = 3 the term was "21" in which we have two groups "2" and "1"
  * @param {number} n
  * @return {string}
  */
-var countAndSay = function (n) {
+const countAndSay = (n) => {
   if (n === 1) return '1'
-  var handle = function (str) {
-    var count = 0, current = str[0], newStr = ''
-    var getNewStr = function (newStr, count, current) {
+  const handle = (str) => {
+    let count = 0, current = str[0], newStr = ''
+    const getNewStr = (newStr, count, current) => {
       return newStr + String(count) + String(current)
     }
-    for (var i = 0; i < str.length; i++) {
+    for (let i = 0; i < str.length; i++) {
       if (current === str[i]) {
         count++
       } else {
