--- a/problems/5.longest-palindromic-substring.md
+++ b/problems/5.longest-palindromic-substring.md
@@ -28,12 +28,12 @@ Output: "bb"
  * @param {string} s
  * @return {string}
  */
-var longestPalindrome = function (s) {
-  var max = ''  
-  for (var i = 0; i < s.length; i++) {
-    for (var j = 0; j < 2; j++){
-      var left = i
-      var right = i + j
+const longestPalindrome = (s) => {
+  let max = ''  
+  for (let i = 0; i < s.length; i++) {
+    for (let j = 0; j < 2; j++){
+      let left = i
+      let right = i + j
       while (s[left] === s[right]) {
         left--
         right++
