style: auto style

--- a/problems/1.two-sum.md
+++ b/problems/1.two-sum.md
@@ -19,8 +19,8 @@ return [0, 1].
 
 ## solution
 
-1. 用对象存储已遍历过的value和对应的index
-2. 在遍历到新数时，只需要检查在对象中是否能找到与新数相加等于target的值
+1. 用对象存储已遍历过的 value 和对应的 index
+2. 在遍历到新数时，只需要检查在对象中是否能找到与新数相加等于 target 的值
 
 ```javascript
 /**
@@ -29,13 +29,13 @@ return [0, 1].
  * @return {number[]}
  */
 const twoSum = (nums, target) => {
-  let exist = {}
+  let exist = {};
   for (let i = 0; i < nums.length; i++) {
-    const remainerIndex = exist[target - nums[i]]
+    const remainerIndex = exist[target - nums[i]];
     if (remainerIndex !== undefined) {
-      return [remainerIndex, i]
+      return [remainerIndex, i];
     }
-    exist[nums[i]] = i
+    exist[nums[i]] = i;
   }
-}
+};
 ```
