--- a/problems/11.container-with-most-water.md
+++ b/problems/11.container-with-most-water.md
@@ -19,7 +19,7 @@ Output: 49
 
 ## solution
 
-1. 面积=长*宽，使用双指针找高度的瓶颈
+1. 面积=长\*宽，使用双指针找高度的瓶颈
 
 ```javascript
 /**
@@ -28,20 +28,20 @@ Output: 49
  */
 const maxArea = (height) => {
   let start = 0,
-      end = height.length - 1,
-      max = 0,
-      current = 0
+    end = height.length - 1,
+    max = 0,
+    current = 0;
   while (start < end) {
-    current = (end - start) * Math.min(height[start], height[end])
+    current = (end - start) * Math.min(height[start], height[end]);
     if (current > max) {
-      max = current
+      max = current;
     }
     if (height[start] < height[end]) {
-      start++
+      start++;
     } else {
-      end--
+      end--;
     }
-  }    
-  return max
-}
+  }
+  return max;
+};
 ```
