--- a/problems/1379.find-a-corresponding-node-of-a-binary-tree-in-a-clone-of-that-tree.md
+++ b/problems/1379.find-a-corresponding-node-of-a-binary-tree-in-a-clone-of-that-tree.md
@@ -15,7 +15,7 @@ Note that you are not allowed to change any of the two trees or the target node 
 
 Follow up: Solve the problem if repeated values on the tree are allowed.
 
- 
+
 
 Example 1:
 
@@ -43,7 +43,7 @@ Example 5:
 
 Input: tree = [1,2,null,3], target = 2
 Output: 2
- 
+
 
 Constraints:
 
@@ -73,10 +73,10 @@ target node is a node from the original tree and is not null.
 
 const getTargetCopy = (original, cloned, target) => {
   const search = (n1, n2) => {
-    if (!n1) return null
-    if (n1 === target) return n2
-    return search(n1.left, n2.left) || search(n1.right, n2.right)
-  }
-  return search(original, cloned)
-}
+    if (!n1) return null;
+    if (n1 === target) return n2;
+    return search(n1.left, n2.left) || search(n1.right, n2.right);
+  };
+  return search(original, cloned);
+};
 ```
