--- a/problems/14.longest-common-prefix.md
+++ b/problems/14.longest-common-prefix.md
@@ -32,25 +32,25 @@ All given inputs are in lowercase letters a-z.
  * @return {string}
  */
 const longestCommonPrefix = (strs) => {
-  let prefix = ''
-  let index = 0
+  let prefix = "";
+  let index = 0;
   const getPrefix = () => {
-    if (!strs.length) return
-    let current = ''
+    if (!strs.length) return;
+    let current = "";
     for (let i = 0; i < strs.length; i++) {
-      const str = strs[i][index]
-      if (!str) return
+      const str = strs[i][index];
+      if (!str) return;
       if (i) {
-        if (current !== str) return
+        if (current !== str) return;
       } else {
-        current = str  
+        current = str;
       }
     }
-    prefix += current
-    index++
-    getPrefix()  
-  }
-  getPrefix()
-  return prefix  
-}
+    prefix += current;
+    index++;
+    getPrefix();
+  };
+  getPrefix();
+  return prefix;
+};
 ```
