--- a/problems/15.3-sum.md
+++ b/problems/15.3-sum.md
@@ -16,14 +16,14 @@ Given array nums = [-1, 0, 1, 2, -1, -4],
 
 A solution set is:
 [
-  [-1, 0, 1],
-  [-1, -1, 2]
+[-1, 0, 1],
+[-1, -1, 2]
 ]
 
 ## solution
 
 1. 对数组排序
-2. 遍历元素，用双指针从小到大标记元素，以0为基准进行收缩
+2. 遍历元素，用双指针从小到大标记元素，以 0 为基准进行收缩
 3. 遍历时若头尾不符合区间或前后为相等值则可跳过
 
 ```javascript
@@ -32,26 +32,26 @@ A solution set is:
  * @return {number[][]}
  */
 const threeSum = (nums) => {
-  const result = []
-  nums = nums.sort((a, b) => a - b)
+  const result = [];
+  nums = nums.sort((a, b) => a - b);
   for (let i = 0; i < nums.length - 2; i++) {
-    if (nums[i] === nums[i - 1]) continue
-    let start = i + 1
-    let end = nums.length - 1
-    if (nums[i] > 0 || nums[end] < 0) continue
+    if (nums[i] === nums[i - 1]) continue;
+    let start = i + 1;
+    let end = nums.length - 1;
+    if (nums[i] > 0 || nums[end] < 0) continue;
     while (start < end) {
-      const sum = nums[i] + nums[start] + nums[end]
+      const sum = nums[i] + nums[start] + nums[end];
       if (sum === 0) {
-        result.push([nums[i], nums[start], nums[end]])
+        result.push([nums[i], nums[start], nums[end]]);
         while (start < end && nums[start] === nums[++start]) {}
-        continue
+        continue;
       } else if (sum < 0) {
-        start++
+        start++;
       } else {
-        end--
+        end--;
       }
     }
   }
-  return result
-}
+  return result;
+};
 ```
