--- a/problems/1561.maximum-number-of-coins-you-can-get.md
+++ b/problems/1561.maximum-number-of-coins-you-can-get.md
@@ -16,7 +16,7 @@ Given an array of integers piles where piles[i] is the number of coins in the it
 
 Return the maximum number of coins which you can have.
 
- 
+
 
 Example 1:
 
@@ -34,7 +34,7 @@ Example 3:
 
 Input: piles = [9,8,7,6,5,1,2,3,4]
 Output: 18
- 
+
 
 Constraints:
 
@@ -45,7 +45,7 @@ piles.length % 3 == 0
 
 ## solution
 
-贪心算法，每次a取最大，b取第二大，c取最小
+贪心算法，每次 a 取最大，b 取第二大，c 取最小
 
 ```javascript
 /**
@@ -53,12 +53,12 @@ piles.length % 3 == 0
  * @return {number}
  */
 const maxCoins = (piles) => {
-  const arr = piles.sort((a, b) => b - a)
-  const count = piles.length / 3
-  let sum = 0
+  const arr = piles.sort((a, b) => b - a);
+  const count = piles.length / 3;
+  let sum = 0;
   for (let i = 0; i < count; i++) {
-    sum += arr[i * 2 + 1]
+    sum += arr[i * 2 + 1];
   }
-  return sum
-}
+  return sum;
+};
 ```
