--- a/problems/16.3-sum-closest.md
+++ b/problems/16.3-sum-closest.md
@@ -22,9 +22,9 @@ Constraints:
 
 1. 对数组排序
 2. 遍历元素，用双指针头尾扫描，计算三数之和
-3. 若找到target则直接返回
-4. 若temp小于result则重新赋值
-5. 若temp大于target则左移右指针，否则右移左指针
+3. 若找到 target 则直接返回
+4. 若 temp 小于 result 则重新赋值
+5. 若 temp 大于 target 则左移右指针，否则右移左指针
 
 ```javascript
 /**
@@ -33,23 +33,23 @@ Constraints:
  * @return {number}
  */
 const threeSumClosest = (nums, target) => {
-  nums.sort((a, b) => a - b)
-  const result = nums[0] + nums[1] + nums[nums.length - 1]
+  nums.sort((a, b) => a - b);
+  const result = nums[0] + nums[1] + nums[nums.length - 1];
   for (let i = 0; i < nums.length - 2; i++) {
-    const n1 = nums[i]
-    let left = i + 1
-    let right = nums.length - 1
+    const n1 = nums[i];
+    let left = i + 1;
+    let right = nums.length - 1;
     while (left < right) {
-      const n2 = nums[left]
-      const n3 = nums[right]
-      const temp = n1 + n2 + n3
-      if (temp === target) return temp
+      const n2 = nums[left];
+      const n3 = nums[right];
+      const temp = n1 + n2 + n3;
+      if (temp === target) return temp;
       if (Math.abs(temp - target) < Math.abs(result - target)) {
-        result = temp
+        result = temp;
       }
-      temp > target ? right-- : left++
+      temp > target ? right-- : left++;
     }
   }
-  return result
-}
+  return result;
+};
 ```
