--- a/problems/17.letter-combinations-of-a-phone-number.md
+++ b/problems/17.letter-combinations-of-a-phone-number.md
@@ -30,29 +30,29 @@ Although the above answer is in lexicographical order, your answer could be in a
  * @return {string[]}
  */
 const letterCombinations = (digits) => {
-  if (!digits) return []
+  if (!digits) return [];
   const map = {
-    2: 'abc',
-    3: 'def',
-    4: 'ghi',
-    5: 'jkl',
-    6: 'mno',
-    7: 'pqrs',
-    8: 'tuv',
-    9: 'wxyz'
-  }
-  let result = ['']
+    2: "abc",
+    3: "def",
+    4: "ghi",
+    5: "jkl",
+    6: "mno",
+    7: "pqrs",
+    8: "tuv",
+    9: "wxyz",
+  };
+  let result = [""];
   for (let i = 0; i < digits.length; i++) {
-    const num = digits[i]
-    const nextResult = []
+    const num = digits[i];
+    const nextResult = [];
     for (let j = 0; j < result.length; j++) {
       for (let k = 0; k < map[num].length; k++) {
-        const char = map[num][k]
-        nextResult.push(result[j] + char)
+        const char = map[num][k];
+        nextResult.push(result[j] + char);
       }
     }
-    result = nextResult
+    result = nextResult;
   }
-  return result
-}
+  return result;
+};
 ```
