--- a/problems/18.4-sum.md
+++ b/problems/18.4-sum.md
@@ -12,7 +12,7 @@ a, b, c, and d are distinct.
 nums[a] + nums[b] + nums[c] + nums[d] == target
 You may return the answer in any order.
 
- 
+
 
 Example 1:
 
@@ -22,7 +22,7 @@ Example 2:
 
 Input: nums = [2,2,2,2,2], target = 8
 Output: [[2,2,2,2]]
- 
+
 
 Constraints:
 
@@ -34,7 +34,7 @@ Constraints:
 ## solution
 
 1. 双指针
-2. 利用Set对结果去重
+2. 利用 Set 对结果去重
 
 ```javascript
 /**
@@ -43,28 +43,28 @@ Constraints:
  * @return {number[][]}
  */
 const fourSum = (nums, target) => {
-  nums.sort((a, b) => a - b)
-  const answer = []
-  const set = new Set()
+  nums.sort((a, b) => a - b);
+  const answer = [];
+  const set = new Set();
   for (let i = 0; i < nums.length; i++) {
     for (let j = i + 1; j < nums.length; j++) {
-      let k = j + 1
-      let l = nums.length - 1
+      let k = j + 1;
+      let l = nums.length - 1;
       while (k < l) {
         if (nums[i] + nums[j] + nums[k] + nums[l] === target) {
           if (!set.has(`${nums[i]}-${nums[j]}-${nums[k]}-${nums[l]}`)) {
-            set.add(`${nums[i]}-${nums[j]}-${nums[k]}-${nums[l]}`)
-            answer.push([nums[i], nums[j], nums[k], nums[l]])
+            set.add(`${nums[i]}-${nums[j]}-${nums[k]}-${nums[l]}`);
+            answer.push([nums[i], nums[j], nums[k], nums[l]]);
           }
-          k++
+          k++;
         } else if (nums[i] + nums[j] + nums[k] + nums[l] < target) {
-          k++
+          k++;
         } else {
-          l--
+          l--;
         }
       }
     }
   }
-  return answer
-}
+  return answer;
+};
 ```
