--- a/problems/19.remove-nth-node-from-end-of-list.md
+++ b/problems/19.remove-nth-node-from-end-of-list.md
@@ -22,9 +22,9 @@ Could you do this in one pass?
 ## solution
 
 1. 双指针
-2. 指针a先走n个节点
-3. 再将指针a和指针b并行走total-n个节点
-4. 此时指针b会走到倒数第n个节点
+2. 指针 a 先走 n 个节点
+3. 再将指针 a 和指针 b 并行走 total-n 个节点
+4. 此时指针 b 会走到倒数第 n 个节点
 5. 进行删除操作
 
 ```javascript
@@ -41,18 +41,19 @@ Could you do this in one pass?
  * @return {ListNode}
  */
 const removeNthFromEnd = (head, n) => {
-  let node1 = head, node2 = head
+  let node1 = head,
+    node2 = head;
   for (let i = 0; i < n; i++) {
-    node1 = node1.next
+    node1 = node1.next;
   }
   if (!node1) {
-    return head.next
+    return head.next;
   }
   while (node1 && node1.next) {
-    node1 = node1.next
-    node2 = node2.next
+    node1 = node1.next;
+    node2 = node2.next;
   }
-  node2.next = node2.next.next
-  return head
-}
+  node2.next = node2.next.next;
+  return head;
+};
 ```
