--- a/problems/2.add-two-numbers.md
+++ b/problems/2.add-two-numbers.md
@@ -19,8 +19,8 @@ Explanation: 342 + 465 = 807.
 ## solution
 
 1. 建立一个新链表
-2. 遍历l1、l2两个链表
-3. 两两相加，使用sum记录节点之和，isAdd标记是否进位
+2. 遍历 l1、l2 两个链表
+3. 两两相加，使用 sum 记录节点之和，isAdd 标记是否进位
 4. 得出结果后插入到新链表中
 
 ```javascript
@@ -37,35 +37,35 @@ Explanation: 342 + 465 = 807.
  * @return {ListNode}
  */
 const addTwoNumbers = (l1, l2) => {
-  const list = new ListNode(0)
-  let head = list
-  let sum = 0
-  let current = 0
-  let isAdd = false
+  const list = new ListNode(0);
+  let head = list;
+  let sum = 0;
+  let current = 0;
+  let isAdd = false;
   while (l1 || l2 || isAdd) {
-    head.next = new ListNode(0)
-    head = head.next
+    head.next = new ListNode(0);
+    head = head.next;
     if (isAdd) {
-      sum += 1
-      isAdd = false
+      sum += 1;
+      isAdd = false;
     }
     if (l1) {
-      sum += l1.val
-      l1 = l1.next
+      sum += l1.val;
+      l1 = l1.next;
     }
     if (l2) {
-      sum += l2.val
-      l2 = l2.next
+      sum += l2.val;
+      l2 = l2.next;
     }
     if (sum >= 10) {
-      current = sum - 10
-      isAdd = true
+      current = sum - 10;
+      isAdd = true;
     } else {
-      current = sum
+      current = sum;
     }
-    head.val = current
-    sum = 0
+    head.val = current;
+    sum = 0;
   }
-  return list.next
-}
+  return list.next;
+};
 ```
