--- a/problems/21.merge-two-sorted-lists.md
+++ b/problems/21.merge-two-sorted-lists.md
@@ -33,19 +33,19 @@ Output: 1->1->2->3->4->4
  * @return {ListNode}
  */
 const mergeTwoLists = (l1, l2) => {
-  const list = new ListNode(null)
-  let current = list
+  const list = new ListNode(null);
+  let current = list;
   while (l1 && l2) {
     if (l1.val > l2.val) {
-      current.next = l2
-      l2 = l2.next  
+      current.next = l2;
+      l2 = l2.next;
     } else {
-      current.next = l1
-      l1 = l1.next  
-    }   
-    current = current.next  
+      current.next = l1;
+      l1 = l1.next;
+    }
+    current = current.next;
   }
-  current.next = l1 || l2  
-  return list.next    
-}
+  current.next = l1 || l2;
+  return list.next;
+};
 ```
