--- a/problems/22.generate-parentheses.md
+++ b/problems/22.generate-parentheses.md
@@ -9,11 +9,11 @@ Given n pairs of parentheses, write a function to generate all combinations of w
 For example, given n = 3, a solution set is:
 
 [
-  "((()))",
-  "(()())",
-  "(())()",
-  "()(())",
-  "()()()"
+"((()))",
+"(()())",
+"(())()",
+"()(())",
+"()()()"
 ]
 
 ## solution
@@ -27,20 +27,20 @@ For example, given n = 3, a solution set is:
  * @return {string[]}
  */
 const generateParenthesis = function (n) {
-  const res = []
+  const res = [];
   const help = (cur, left, right) => {
     if (cur.length === 2 * n) {
-      res.push(cur)
-      return
+      res.push(cur);
+      return;
     }
     if (left < n) {
-      help(cur + '(', left + 1, right)
+      help(cur + "(", left + 1, right);
     }
     if (right < left) {
-      help(cur + ')', left, right + 1);
+      help(cur + ")", left, right + 1);
     }
-  }
-  help('', 0, 0)
-  return res
-}
+  };
+  help("", 0, 0);
+  return res;
+};
 ```
