--- a/problems/28.implement-strstr.md
+++ b/problems/28.implement-strstr.md
@@ -24,7 +24,7 @@ For the purpose of this problem, we will return 0 when needle is an empty string
 
 ## solution
 
-1. 通过substr来截取字符串比较
+1. 通过 substr 来截取字符串比较
 
 ```javascript
 /**
@@ -33,11 +33,11 @@ For the purpose of this problem, we will return 0 when needle is an empty string
  * @return {number}
  */
 const strStr = (haystack, needle) => {
-  const length = needle.length
-  if (length === 0) return 0
+  const length = needle.length;
+  if (length === 0) return 0;
   for (let i = 0; i < haystack.length; i++) {
-    if (haystack.substr(i, length) === needle) return i
-  }  
-  return -1  
-}
+    if (haystack.substr(i, length) === needle) return i;
+  }
+  return -1;
+};
 ```
