--- a/problems/3.longest-substring-without-repeating-characters.md
+++ b/problems/3.longest-substring-without-repeating-characters.md
@@ -10,8 +10,8 @@ Given a string, find the length of the longest substring without repeating chara
 Example 1:
 
 Input: "abcabcbb"
-Output: 3 
-Explanation: The answer is "abc", with the length of 3. 
+Output: 3
+Explanation: The answer is "abc", with the length of 3.
 Example 2:
 
 Input: "bbbbb"
@@ -21,7 +21,7 @@ Example 3:
 
 Input: "pwwkew"
 Output: 3
-Explanation: The answer is "wke", with the length of 3. 
+Explanation: The answer is "wke", with the length of 3.
              Note that the answer must be a substring, "pwke" is a subsequence and not a substring.
 ```
 
@@ -37,15 +37,15 @@ Explanation: The answer is "wke", with the length of 3.
  * @return {number}
  */
 const lengthOfLongestSubstring = (s) => {
-  const map = {}
-  let left = 0
-  let max = 0
+  const map = {};
+  let left = 0;
+  let max = 0;
   for (let i = 0; i < s.length; i++) {
-    const value = s[i]  
-    left = map[value] >= left ? map[value] + 1 : left
-    max = Math.max(max, i - left + 1)
-    map[value] = i  
+    const value = s[i];
+    left = map[value] >= left ? map[value] + 1 : left;
+    max = Math.max(max, i - left + 1);
+    map[value] = i;
   }
-  return max  
-}
+  return max;
+};
 ```
