--- a/problems/38.count-and-say.md
+++ b/problems/38.count-and-say.md
@@ -20,7 +20,7 @@ Given an integer n where 1 ≤ n ≤ 30, generate the nth term of the count-and-
 
 Note: Each term of the sequence of integers will be represented as a string.
 
- 
+
 
 Example 1:
 
@@ -45,24 +45,26 @@ Explanation: For n = 3 the term was "21" in which we have two groups "2" and "1"
  * @return {string}
  */
 const countAndSay = (n) => {
-  if (n === 1) return '1'
+  if (n === 1) return "1";
   const handle = (str) => {
-    let count = 0, current = str[0], newStr = ''
+    let count = 0,
+      current = str[0],
+      newStr = "";
     const getNewStr = (newStr, count, current) => {
-      return newStr + String(count) + String(current)
-    }
+      return newStr + String(count) + String(current);
+    };
     for (let i = 0; i < str.length; i++) {
       if (current === str[i]) {
-        count++
+        count++;
       } else {
-        newStr = getNewStr(newStr, count, current)
-        current = str[i]
-        count = 1
+        newStr = getNewStr(newStr, count, current);
+        current = str[i];
+        count = 1;
       }
     }
-    newStr = getNewStr(newStr, count, current)
-    return newStr
-  }
-  return handle(countAndSay(n - 1))
-}
+    newStr = getNewStr(newStr, count, current);
+    return newStr;
+  };
+  return handle(countAndSay(n - 1));
+};
 ```
