--- a/problems/49.group-anagrams.md
+++ b/problems/49.group-anagrams.md
@@ -32,25 +32,25 @@ The order of your output does not matter.
  * @return {string[][]}
  */
 const groupAnagrams = (strs) => {
-  const result = {}
+  const result = {};
   for (let i = 0; i < strs.length; i++) {
-    const str = strs[i]
-    const array = new Array(26).fill(0)
+    const str = strs[i];
+    const array = new Array(26).fill(0);
     for (let j = 0; j < str.length; j++) {
-      const char = str[j]
-      array[char.charCodeAt() - 97]++
+      const char = str[j];
+      array[char.charCodeAt() - 97]++;
     }
-    const key = array.join('#')
+    const key = array.join("#");
     if (result[key]) {
-      result[key].push(str)
+      result[key].push(str);
     } else {
-      result[key] = [str]
+      result[key] = [str];
     }
   }
-  const answer = []
+  const answer = [];
   for (let i in result) {
-    answer.push(result[i])
+    answer.push(result[i]);
   }
-  return answer
-}
+  return answer;
+};
 ```
