--- a/problems/5.longest-palindromic-substring.md
+++ b/problems/5.longest-palindromic-substring.md
@@ -21,7 +21,7 @@ Output: "bb"
 
 ## solution
 
-1. 以当前元素为基准，向左右移动判断是否为回文，要注意aba和abba都属于回文
+1. 以当前元素为基准，向左右移动判断是否为回文，要注意 aba 和 abba 都属于回文
 
 ```javascript
 /**
@@ -29,21 +29,21 @@ Output: "bb"
  * @return {string}
  */
 const longestPalindrome = (s) => {
-  let max = ''  
+  let max = "";
   for (let i = 0; i < s.length; i++) {
-    for (let j = 0; j < 2; j++){
-      let left = i
-      let right = i + j
+    for (let j = 0; j < 2; j++) {
+      let left = i;
+      let right = i + j;
       while (s[left] === s[right]) {
-        left--
-        right++
-        if (!s[left] || !s[right]) break  
+        left--;
+        right++;
+        if (!s[left] || !s[right]) break;
       }
-      if ((right - left - 1) > max.length) {
-        max = s.substring(left + 1, right)  
+      if (right - left - 1 > max.length) {
+        max = s.substring(left + 1, right);
       }
-    }  
-  }   
-  return max  
-}
+    }
+  }
+  return max;
+};
 ```
