--- a/problems/53.maximum-subarray.md
+++ b/problems/53.maximum-subarray.md
@@ -20,8 +20,8 @@ If you have figured out the O(n) solution, try coding another solution using the
 ## solution
 
 1. 计算区间的和
-2. 当和大于0时继续计算
-3. 当和小于0时，开始下一个区间
+2. 当和大于 0 时继续计算
+3. 当和小于 0 时，开始下一个区间
 
 ```javascript
 /**
@@ -29,16 +29,16 @@ If you have figured out the O(n) solution, try coding another solution using the
  * @return {number}
  */
 const maxSubArray = (nums) => {
-  let answer = nums[0]
-  let sum = 0
+  let answer = nums[0];
+  let sum = 0;
   for (let i = 0; i < nums.length; i++) {
     if (sum > 0) {
-      sum += nums[i]
+      sum += nums[i];
     } else {
-      sum = nums[i]
+      sum = nums[i];
     }
-    answer = Math.max(answer, sum)
+    answer = Math.max(answer, sum);
   }
-  return answer
-}
+  return answer;
+};
 ```
