--- a/problems/535.encode-and-decode-tinyurl.md
+++ b/problems/535.encode-and-decode-tinyurl.md
@@ -12,7 +12,7 @@ Design the encode and decode methods for the TinyURL service. There is no restri
 
 ## solution
 
-base64的编码、解码
+base64 的编码、解码
 
 ```javascript
 /**
@@ -22,8 +22,8 @@ base64的编码、解码
  * @return {string}
  */
 const encode = (longUrl) => {
-  return 'http://tinyurl.com/' + new Buffer(longUrl).toString('base64')
-}
+  return "http://tinyurl.com/" + new Buffer(longUrl).toString("base64");
+};
 
 /**
  * Decodes a shortened URL to its original URL.
@@ -32,8 +32,11 @@ const encode = (longUrl) => {
  * @return {string}
  */
 const decode = (shortUrl) => {
-  return new Buffer((shortUrl.split('http://tinyurl.com/')[1]), 'base64').toString()
-}
+  return new Buffer(
+    shortUrl.split("http://tinyurl.com/")[1],
+    "base64"
+  ).toString();
+};
 
 /**
  * Your functions will be called as such:
