--- a/problems/6.zigzag-conversion.md
+++ b/problems/6.zigzag-conversion.md
@@ -15,7 +15,7 @@ And then read line by line: "PAHNAPLSIIGYIR"
 Write the code that will take a string and make this conversion given a number of rows:
 
 string convert(string s, int numRows);
- 
+
 
 Example 1:
 
@@ -34,7 +34,7 @@ Example 3:
 
 Input: s = "A", numRows = 1
 Output: "A"
- 
+
 
 Constraints:
 
@@ -55,40 +55,40 @@ s consists of English letters (lower-case and upper-case), ',' and '.'.
  * @return {string}
  */
 const convert = (s, numRows) => {
-  const rowCount = Math.min(s.length, numRows)
-  const rows = []
-  let row = 0
-  let direction = 'down'
-  let answer = ''
+  const rowCount = Math.min(s.length, numRows);
+  const rows = [];
+  let row = 0;
+  let direction = "down";
+  let answer = "";
   for (let i = 0; i < rowCount; i++) {
-    rows[i] = ''
+    rows[i] = "";
   }
   for (const i of s) {
-    if (direction === 'down') {
-      rows[row] += i
+    if (direction === "down") {
+      rows[row] += i;
       if (row < rowCount - 1) {
-        row++
+        row++;
       } else {
         if (row > 0) {
-          row--
+          row--;
         }
-        direction = 'right'
+        direction = "right";
       }
-    } else if (direction === 'right') {
-      rows[row] += i
+    } else if (direction === "right") {
+      rows[row] += i;
       if (row > 0) {
-        row--
+        row--;
       } else {
-        if (row < rowCount -1) {
-          row++
+        if (row < rowCount - 1) {
+          row++;
         }
-        direction = 'down'
+        direction = "down";
       }
     }
   }
   for (const row of rows) {
-    answer += row
+    answer += row;
   }
-  return answer
-}
+  return answer;
+};
 ```
