--- a/problems/8.string-to-integer.md
+++ b/problems/8.string-to-integer.md
@@ -19,7 +19,7 @@ Note:
 
 Only the space character ' ' is considered a whitespace character.
 Do not ignore any characters other than the leading whitespace or the rest of the string after the digits.
- 
+
 
 Example 1:
 
@@ -86,7 +86,7 @@ Step 3: "-91283472332" ("91283472332" is read in)
                      ^
 The parsed integer is -91283472332.
 Since -91283472332 is less than the lower bound of the range [-231, 231 - 1], the final result is clamped to -231 = -2147483648.
- 
+
 
 Constraints:
 
@@ -96,7 +96,7 @@ s consists of English letters (lower-case and upper-case), digits (0-9), ' ', '+
 
 ## solution
 
-parseInt自带各种testcase
+parseInt 自带各种 testcase
 
 ```javascript
 /**
@@ -104,9 +104,9 @@ parseInt自带各种testcase
  * @return {number}
  */
 const myAtoi = (s) => {
-  const target = parseInt(s.trim()) || 0
-  if (target >= 2147483647) return 2147483647
-  if (target <= -2147483648) return -2147483648
-  return target
-}
+  const target = parseInt(s.trim()) || 0;
+  if (target >= 2147483647) return 2147483647;
+  if (target <= -2147483648) return -2147483648;
+  return target;
+};
 ```
