--- a/problems/12.integer-to-roman.md
+++ b/problems/12.integer-to-roman.md
@@ -19,12 +19,12 @@ For example, 2 is written as II in Roman numeral, just two one's added together.
 
 Roman numerals are usually written largest to smallest from left to right. However, the numeral for four is not IIII. Instead, the number four is written as IV. Because the one is before the five we subtract it making four. The same principle applies to the number nine, which is written as IX. There are six instances where subtraction is used:
 
-I can be placed before V (5) and X (10) to make 4 and 9. 
-X can be placed before L (50) and C (100) to make 40 and 90. 
+I can be placed before V (5) and X (10) to make 4 and 9.
+X can be placed before L (50) and C (100) to make 40 and 90.
 C can be placed before D (500) and M (1000) to make 400 and 900.
 Given an integer, convert it to a roman numeral.
 
- 
+
 
 Example 1:
 
@@ -48,7 +48,7 @@ Example 5:
 Input: num = 1994
 Output: "MCMXCIV"
 Explanation: M = 1000, CM = 900, XC = 90 and IV = 4.
- 
+
 
 Constraints:
 
@@ -65,79 +65,79 @@ Constraints:
  * @return {string}
  */
 const intToRoman = (num) => {
-  const str = String(num)
-  const length = str.length
-  let answer = ''
+  const str = String(num);
+  const length = str.length;
+  let answer = "";
   for (let i = 0; i < length; i++) {
-    const current = Number(str[i])
-    const digit = length - i
+    const current = Number(str[i]);
+    const digit = length - i;
     switch (digit) {
       case 1: {
         if (current < 5) {
           if (current === 4) {
-            answer += 'IV'
+            answer += "IV";
           } else {
-            answer += Array(current).fill('I').join('')
+            answer += Array(current).fill("I").join("");
           }
         } else {
           if (current === 9) {
-            answer += 'IX'
+            answer += "IX";
           } else {
-            const remain = current - 5
-            answer += 'V'
+            const remain = current - 5;
+            answer += "V";
             for (let j = 0; j < remain; j++) {
-              answer += 'I'
+              answer += "I";
             }
           }
         }
-        break
-      }  
+        break;
+      }
       case 2: {
         if (current < 5) {
           if (current === 4) {
-            answer += 'XL'
+            answer += "XL";
           } else {
-            answer += Array(current).fill('X').join('')
+            answer += Array(current).fill("X").join("");
           }
         } else {
           if (current === 9) {
-            answer += 'XC'
+            answer += "XC";
           } else {
-            const remain = current - 5
-            answer += 'L'
+            const remain = current - 5;
+            answer += "L";
             for (let j = 0; j < remain; j++) {
-              answer += 'X'
+              answer += "X";
             }
           }
         }
-        break
-      }  
+        break;
+      }
       case 3: {
         if (current < 5) {
           if (current === 4) {
-            answer += 'CD'
+            answer += "CD";
           } else {
-            answer += Array(current).fill('C').join('')
+            answer += Array(current).fill("C").join("");
           }
         } else {
           if (current === 9) {
-            answer += 'CM'
+            answer += "CM";
           } else {
-            const remain = current - 5
-            answer += 'D'
+            const remain = current - 5;
+            answer += "D";
             for (let j = 0; j < remain; j++) {
-              answer += 'C'
+              answer += "C";
             }
           }
         }
-        break
+        break;
       }
       case 4: {
-        answer += Array(current).fill('M').join('')
-        break
+        answer += Array(current).fill("M").join("");
+        break;
       }
     }
   }
-  return answer
-}
+  return answer;
+};
 ```
