--- a/problems/1551.minimum-operations-to-make-array-equal.md
+++ b/problems/1551.minimum-operations-to-make-array-equal.md
@@ -11,7 +11,7 @@ In one operation, you can select two indices x and y where 0 <= x, y < n and sub
 
 Given an integer n, the length of the array. Return the minimum number of operations needed to make all the elements of arr equal.
 
- 
+
 
 Example 1:
 
@@ -24,7 +24,7 @@ Example 2:
 
 Input: n = 6
 Output: 9
- 
+
 
 Constraints:
 
@@ -42,11 +42,11 @@ Constraints:
  */
 const minOperations = (n) => {
   if (n % 2) {
-    const index = Math.ceil(n / 2)
-    return index * (index - 1)
+    const index = Math.ceil(n / 2);
+    return index * (index - 1);
   } else {
-    const index = n / 2
-    return index * index
-  }   
-}
+    const index = n / 2;
+    return index * index;
+  }
+};
 ```
