--- a/problems/20.valid-parentheses.md
+++ b/problems/20.valid-parentheses.md
@@ -44,22 +44,22 @@ Output: true
  * @return {boolean}
  */
 const isValid = (s) => {
-  const stack = []
+  const stack = [];
   for (let i = 0; i < s.length; i++) {
     switch (s[i]) {
-      case '(':
-        stack.push(')')  
-        break    
-      case '[':
-        stack.push(']')   
-        break    
-      case '{':
-        stack.push('}')   
-        break
+      case "(":
+        stack.push(")");
+        break;
+      case "[":
+        stack.push("]");
+        break;
+      case "{":
+        stack.push("}");
+        break;
       default:
-        if (s[i] !== stack.pop()) return false    
+        if (s[i] !== stack.pop()) return false;
     }
-  }  
-  return !stack.length  
-}
+  }
+  return !stack.length;
+};
 ```
