--- a/problems/26.remove-duplicates-from-sorted-array.md
+++ b/problems/26.remove-duplicates-from-sorted-array.md
@@ -36,13 +36,13 @@ int len = removeDuplicates(nums);
 // any modification to nums in your function would be known by the caller.
 // using the length returned by your function, it prints the first len elements.
 for (int i = 0; i < len; i++) {
-    print(nums[i]);
+print(nums[i]);
 }
 
 ## solution
 
 1. 已知是有序数组，只需要记录遍历过的最后一个数字，与当前数字进行异或比较
-2. 若不为0则表示为新数，将其放至数组头部，用于计算结果时取数组的前n位数
+2. 若不为 0 则表示为新数，将其放至数组头部，用于计算结果时取数组的前 n 位数
 
 ```javascript
 /**
@@ -50,15 +50,14 @@ for (int i = 0; i < len; i++) {
  * @return {number}
  */
 const removeDuplicates = (nums) => {
-  let length = 0
-  let current
+  let length = 0;
+  let current;
   for (let i = 0; i < nums.length; i++) {
-    if (current === undefined || nums[i] ^ current)   {
-      current = nums[i]
-      nums[length++] = current  
+    if (current === undefined || nums[i] ^ current) {
+      current = nums[i];
+      nums[length++] = current;
     }
   }
-  return length  
-}
+  return length;
+};
 ```
-
