--- a/problems/27.remove-element.md
+++ b/problems/27.remove-element.md
@@ -40,13 +40,13 @@ int len = removeElement(nums, val);
 // any modification to nums in your function would be known by the caller.
 // using the length returned by your function, it prints the first len elements.
 for (int i = 0; i < len; i++) {
-    print(nums[i]);
+print(nums[i]);
 }
 
 ## solution
 
 1. 遍历数组
-2. 若当前项与val相等，则直接从数组中去掉当前项，并将遍历的下标减1，这样时间复杂度只需要O(n)
+2. 若当前项与 val 相等，则直接从数组中去掉当前项，并将遍历的下标减 1，这样时间复杂度只需要 O(n)
 
 ```javascript
 /**
@@ -55,14 +55,14 @@ for (int i = 0; i < len; i++) {
  * @return {number}
  */
 const removeElement = (nums, val) => {
-  let length = nums.length
+  let length = nums.length;
   for (let i = 0; i < length; i++) {
     if (nums[i] === val) {
-      nums.splice(i, 1)
-      i--
-      length = nums.length
-    }  
+      nums.splice(i, 1);
+      i--;
+      length = nums.length;
+    }
   }
-  return length  
-}
+  return length;
+};
 ```
