--- a/problems/35.search-insert-position.md
+++ b/problems/35.search-insert-position.md
@@ -38,17 +38,18 @@ Output: 0
  * @return {number}
  */
 const searchInsert = (nums, target) => {
-  let left = 0, right = nums.length - 1
+  let left = 0,
+    right = nums.length - 1;
   while (left <= right) {
-    const mid = Math.floor((left + right) / 2)
+    const mid = Math.floor((left + right) / 2);
     if (nums[mid] === target) {
-      return mid
+      return mid;
     } else if (nums[mid] < target) {
-      left = mid + 1
+      left = mid + 1;
     } else {
-      right = mid - 1
+      right = mid - 1;
     }
   }
-  return left
-}
+  return left;
+};
 ```
