--- a/problems/7.reverse-integer.md
+++ b/problems/7.reverse-integer.md
@@ -25,7 +25,7 @@ Assume we are dealing with an environment which could only store integers within
 
 ## solution
 
-1. 将其字符串化，使用js原生方法split、reverse、join，注意正负数和溢出
+1. 将其字符串化，使用 js 原生方法 split、reverse、join，注意正负数和溢出
 
 ```javascript
 /**
@@ -33,7 +33,8 @@ Assume we are dealing with an environment which could only store integers within
  * @return {number}
  */
 const reverse = (x) => {
-  const reversed = Math.abs(x).toString().split('').reverse().join('') * Math.sign(x)
-  return reversed <= 0x7fffffff && reversed >= -0x80000000 ? reversed : 0
-}
+  const reversed =
+    Math.abs(x).toString().split("").reverse().join("") * Math.sign(x);
+  return reversed <= 0x7fffffff && reversed >= -0x80000000 ? reversed : 0;
+};
 ```
