--- a/problems/9.palindrome-number.md
+++ b/problems/9.palindrome-number.md
@@ -27,7 +27,7 @@ Coud you solve it without converting the integer to a string?
 ## solution
 
 1. 排除不会是回文的负数
-2. 将数字不断模10，插入新数中
+2. 将数字不断模 10，插入新数中
 3. 判断两者是否相等
 
 ```javascript
@@ -36,14 +36,14 @@ Coud you solve it without converting the integer to a string?
  * @return {boolean}
  */
 const isPalindrome = (x) => {
-  if (x < 0) return false
-  const old = x
-  let reverse = 0
+  if (x < 0) return false;
+  const old = x;
+  let reverse = 0;
   while (x) {
-    const remainder = x % 10
-    reverse = reverse * 10 + remainder
-    x = Math.floor(x / 10)
+    const remainder = x % 10;
+    reverse = reverse * 10 + remainder;
+    x = Math.floor(x / 10);
   }
-  return old === reverse  
-}
+  return old === reverse;
+};
 ```
